--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,10 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
-        "drewm/mailchimp-api": "^2.5",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "spatie/laravel-newsletter": "^4.7"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
